# agentic-kusto-detective

./: .gitignore  Makefile  PLAN.md  README.md  generate_report.py  kql_events.jsonl  pyproject.toml  ralph.bat  ralph.py  research_doc.md  run.py  start.py
.github/: copilot-instructions.md
agents/bundles/detective-v1/: config.json  prompt.md
agents/bundles/detective-v1/knowledge/: memory-template.md
agents/bundles/detective-v2/: config.json  prompt.md
agents/bundles/detective-v2/skills/detective-kusto/: SKILL.md
agents/bundles/detective-v2/skills/plan-act-observe-reflect/: SKILL.md
agents/bundles/detective-v3/: config.json  prompt.md
agents/bundles/detective-v3-timed/: mcps.json  prompt.md
agents/bundles/detective-v3-timed/skills/image-analysis/: SKILL.md
agents/bundles/detective-v3-timed/skills/plan-act-observe-reflect/: SKILL.md
agents/bundles/detective-v4/: prompt.md
agents/bundles/detective-v4-timed/: prompt.md
solved_challenges/1/: report.md
solved_challenges/2/: report.md
solved_challenges/3/: report.md
src/detective/: action_log.py  bundle_loader.py  handoff_tools.py  kusto_tools.py  log_parser.py  main.py  memory_tools.py  reasoning_tools.py  runner.py  scoreboard.py  season.py  server.py  session_context.py  session_state.py
tests/: challenges.json  conftest.py  run_isolated.py  setup_kusto.py  test_e2e.py  test_server.py  test_state.json
web/: package-lock.json
web/src/: App.tsx  api.ts  index.css
web/src/components/: LiveLog.tsx  NewSessionForm.tsx  SessionsTable.tsx
(+4 files in other folders)
